set(RandBLAS_cxx_srcs
    base.cc)

set(RandBLAS_libs blaspp Random123)

if (RandBLAS_HAS_OpenMP)
    list(APPEND RandBLAS_libs OpenMP::OpenMP_CXX)
endif()

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in config.h)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/config.h
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/RandBLAS)

add_library(RandBLAS ${RandBLAS_cxx_srcs})

target_include_directories(RandBLAS PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/..>
  $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
  $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/RandBLAS>)

target_link_libraries(RandBLAS PUBLIC ${RandBLAS_libs})
target_compile_options(RandBLAS PUBLIC -Wall -Wextra)

install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
  DESTINATION include FILES_MATCHING PATTERN "*.hh")

install(TARGETS RandBLAS EXPORT RandBLAS
  INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/RandBLAS
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})

install(EXPORT RandBLAS DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake
  EXPORT_LINK_INTERFACE_LIBRARIES)
